# Coursera-C-White

./: .gitignore  CMakeLists.txt  README.md
1 week/: CMakeLists.txt  main.cpp
1 week/src/: 2.cpp  chet.cpp  del.cpp  eqv.cpp  min_str.cpp  nod.cpp  sale.cpp
2 week/: CMakeLists.txt
2 week/src/: my_vector.h  poly_filter.cpp
2 week/src/functions/: factorial.cpp  movestr.cpp  polindrom.cpp  reverse_vectors.cpp
2 week/src/map/: buses_2.cpp  handbook.cpp
2 week/src/set/: synonims.cpp
2 week/src/vector/: average_t.cpp  daily.cpp  queue.cpp
3 week/: CMakeLists.txt
3 week/src/: sort_module.cpp
src/1_week/: fstr.cpp  sum.cpp
src/2_week/: my_vector.cpp
src/2_week/functions/: poly_filter.cpp  update.cpp
src/2_week/map/: anagram.cpp  buses.cpp
src/2_week/set/: buses_3.cpp  set_of_map.cpp  unique_str.cpp
src/3_week/: names_1.cpp  sort_without_register.cpp  sorted_strings.cpp
