cmake_minimum_required(VERSION 3.14)
project(coursera_cpp_white)

set(CMAKE_CXX_STANDARD 17)

# Executables are commented when a week is passed

# First week executables

#add_executable(min_str src/1_week/min_str.cpp)
#add_executable(eqv src/1_week/eqv.cpp)
#add_executable(del src/1_week/del.cpp)
#add_executable(sale src/1_week/sale.cpp)
#add_executable(sum src/1_week/sum.cpp)
#add_executable(chet src/1_week/chet.cpp)
#add_executable(fstr src/1_week/fstr.cpp)
#add_executable(nod src/1_week/nod.cpp)
#add_executable(2 src/1_week/2.cpp)

# Second week executables

#add_executable(factorial src/2_week/functions/factorial.cpp)
#add_executable(polindrom src/2_week/functions/polindrom.cpp)
#add_executable(poly_filter src/2_week/functions/poly_filter.cpp)
#add_executable(update src/2_week/functions/update.cpp)
#add_executable(movestr src/2_week/functions/movestr.cpp)
#add_executable(reverse_vectors src/2_week/functions/reverse_vectors.cpp src/2_week/my_vector.cpp)
#add_executable(average_t src/2_week/vector/average_t.cpp)
#add_executable(queue src/2_week/vector/queue.cpp)
#add_executable(daily src/2_week/vector/daily.cpp)
#add_executable(anagram src/2_week/map/anagram.cpp)
#add_executable(Handbook src/2_week/map/handbook.cpp)
#add_executable(buses src/2_week/map/buses.cpp)
#add_executable(buses_2 src/2_week/map/buses_2.cpp)
#add_executable(unique_str src/2_week/set/unique_str.cpp)
#add_executable(set_of_map src/2_week/set/set_of_map.cpp)
#add_executable(synonims src/2_week/set/synonims.cpp)
#add_executable(buses_3 src/2_week/set/buses_3.cpp)

# Third week executables

add_executable(sort_module src/3_week/sort_module.cpp)
add_executable(sort_without_register src/3_week/sort_without_register.cpp)
add_executable(sorted_strings src/3_week/sorted_strings.cpp)
