cmake_minimum_required(VERSION 3.14)
project(1_week)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_week main.cpp)
add_executable(min_str "src/min_str.cpp")

add_executable(eqv "src/eqv.cpp")
add_executable(del "src/del.cpp")
add_executable(sale src/sale.cpp)
add_executable(sum src/sum.cpp)
add_executable(chet src/chet.cpp)
add_executable(fstr src/fstr.cpp)
add_executable(nod src/nod.cpp)
add_executable(2 src/2.cpp)