cmake_minimum_required(VERSION 3.14)
project(2_week)

set(CMAKE_CXX_STANDARD 17)

add_executable(2_week main.cpp)
add_executable(factorial src/functions/factorial.cpp)
add_executable(polindrom src/functions/polindrom.cpp)
add_executable(poly_filter src/functions/poly_filter.cpp)
add_executable(update src/functions/update.cpp)
add_executable(movestr src/functions/movestr.cpp)
add_executable(reverse_vectors src/functions/reverse_vectors.cpp src/my_vector.cpp)
add_executable(average_t src/vector/average_t.cpp)
add_executable(queue src/vector/queue.cpp)
add_executable(daily src/vector/daily.cpp)
add_executable(anagram src/map/anagram.cpp)
add_executable(Handbook src/map/handbook.cpp)
add_executable(buses src/map/buses.cpp)
add_executable(buses_2 src/map/buses_2.cpp)
add_executable(unique_str src/set/unique_str.cpp)
add_executable(set_of_map src/set/set_of_map.cpp)
add_executable(synonims src/set/synonims.cpp)
add_executable(buses_3 src/set/buses_3.cpp)